# rag-pix-regulation

./: .coverage  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: .gitkeep  streamlit_app.py  styles.py
config/: .gitkeep  config.yaml  document_aliases.yaml
data/: SOURCES.md
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  EVALUATION.md
notebooks/: .gitkeep
reports/: evaluation_report.json
scripts/: .gitkeep  annotate_chunks.py  compare_rag_vs_llm.py  compare_search_strategies.py  demo_rag.py  demo_retrieval.py  evaluate_rag.py  evaluate_retrieval.py  init_weaviate.py  run_chunking.py  run_indexing.py  run_ingestion.py  run_pipeline.py  test_chunking.py  test_pdf_loader.py  test_structural_segmenter.py  validate_chunking.py  validate_pdf_loader.py  validate_structural_segmenter.py
src/: __init__.py
tests/: __init__.py  conftest.py  helpers.py  test_answer_quality.py  test_chunk_dataset.py  test_content_hash.py  test_context_builder.py  test_dataset_loader.py  test_embeddings.py  test_hybrid_search.py  test_keyword_search.py  test_logging_setup.py  test_metadata_extractor.py  test_pdf_loader.py  test_prompt_template.py  test_query_embedding.py  test_rag_evaluation.py  test_rag_pipeline.py  test_reranker.py  test_retrieval_metrics.py  test_retriever.py  test_retriever_strategy.py  test_serializer.py  test_settings.py  test_similarity_filter.py  test_structural_segmenter.py  test_text_cleaner.py  test_token_chunker.py  test_tokenizer.py  test_tracing_spans.py  test_vector_index.py  test_vector_search.py
(+68 files in other folders)
