[project]
name = "rag-pix-regulation"
version = "0.7.0"
description = "RAG system for querying Brazilian Pix regulatory documentation"
requires-python = ">=3.10"
authors = [{ name = "Bruno Ramos Martins" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: tests that download large models (~1.3 GB) or take significant time",
    "integration: tests that require external services (Weaviate, Ollama)",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["RAG_DeepLearningAI"]

[tool.ruff.lint.per-file-ignores]
# Path setup required before src imports
"app/streamlit_app.py" = ["E402"]
"scripts/evaluate_rag.py" = ["E402"]
"scripts/evaluate_retrieval.py" = ["E402"]
"scripts/demo_rag.py" = ["E402"]
"scripts/compare_rag_vs_llm.py" = ["E402"]
